updating config.yaml

--- a/packs/webpagetest/config.yaml
+++ b/packs/webpagetest/config.yaml
@@ -1,3 +1,8 @@
 ---
-endpoint: webpagetest.org
-key:
+wpt_url = "http://webpagetest.org"
+wpt_key = "yourkeyhere"
+domain = "www.google.com"
+slack_url = "yourhookhere"
+slack_channel = "#channel"
+slack_user = "youruser"
+slack_icon = "usericon"
